turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:1: error: illegal start of statement (no modifiers allowed here)
override def run() {override def run() {
                    ^