turtleart.lessons.turtleart.Main.HouseMany.scala.code
override def run() {override def run() {
  for (i<-1 to 4) {
  avance(30)
  droite(30)
  avance(30)
  droite(120)
  avance(30)
  droite(120)
  avance(30)
	droite(180)
  avance(30)
  droite(90)
  avance(30)
  droite(90)
  avance(30)
  droite(90)
  droite(90)
  leveCrayon()
  avance(50)
  gauche(90)
  baisseCrayon()
  }
  
  leveCrayon()
  gauche(90)
  avance(30)
  droite(90)
  avance(75)
  baisseCrayon()
   avance(30)
  droite(30)
  avance(30)
  droite(120)
  avance(30)
  droite(120)
  avance(30)
	droite(180)
  avance(30)
  droite(90)
  avance(30)
  droite(90)
  avance(30)
  droite(90)
  droite(90)
  leveCrayon()
  avance(150)
  gauche(90)
  baisseCrayon()
  avance(200)
  droite(90)
  avance(75)
 
   avance(100)
  droite(30)
  avance(100)
  droite(120)
  avance(100)
  droite(120)
  avance(100)
	droite(180)
  avance(100)
  droite(90)
  avance(100)
  droite(90)
  avance(100)
  droite(90)
  gauche(90)
  leveCrayon()
  avance(150)
  
  
}
}